// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component should render a tag count of 11 1`] = `
<Button
  className="ins-c-tag-count"
  onClick={[Function]}
  variant="plain"
>
  <TagIcon
    color="currentColor"
    size="md"
    title={null}
  />
  <span
    className="ins-c-tag__text"
  >
    11
  </span>
</Button>
`;

exports[`TagCount component should render a tag count with no value 1`] = `
<Button
  className="ins-c-tag-count"
  onClick={[Function]}
  variant="plain"
>
  <TagIcon
    color="currentColor"
    size="md"
    title={null}
  />
  <span
    className="ins-c-tag__text"
  />
</Button>
`;
